--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zkmap",
-  "version": "1.0.0",
+  "name": "zk-map",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/build/zkmap.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "build": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.build.config.js",
     "watch": "webpack --watch"
   },
-  "author": "",
+  "author": "zkmap",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
